Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18824

"lfs migrate" does not honor --overstripe-count|-C option

XMLWordPrintable

    • 9223372036854775807

      # dd if=/dev/zero of=/mnt/lustre/f1 bs=1K count=1
      1+0 records in
      1+0 records out
      1024 bytes (1.0 kB, 1.0 KiB) copied, 0.00816092 s, 125 kB/s
      # lfs migrate --overstripe-count=5 /mnt/lustre/f1
      # lfs getstripe /mnt/lustre/f1
      /mnt/lustre/f1
      lmm_stripe_count:  2                 <<<<<<<<<<<<<  it is not 5
      lmm_stripe_size:   4194304
      lmm_pattern:       raid0
      lmm_layout_gen:    1
      lmm_stripe_offset: 0
          obdidx         objid         objid         group
               0               172             0xac       0x240000400
               1               161             0xa1       0x280000400

            paf0186 Patrick Farrell
            flei Feng Lei
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: